@@ -1603,8 +1603,8 @@ CUPS-Get-Devices request:
 
 	<dt>"timeout" (integer (1:MAX)) :<span class='info'>CUPS 1.4/Mac OS X 10.6</span>
 
-	<dd>The client OPTIONALLY supplies this attribute limiting the number of
-	devices that are returned.
+	<dd>The client OPTIONALLY supplies this attribute to limit the duration
+	of the lookup. The default timeout is 15 seconds.
 
 </dl>
 
